# bspts

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  Readme.md  TODO  compose.env  docker-compose.yml
backend/: .env  Cargo.toml
backend/migrations/2020-11-11-232527_create_tasks_table/: down.sql  up.sql
backend/migrations/2020-11-25-185716_create_table_tasks/: up.sql
backend/migrations/2020-11-28-223001_create_user_table/: down.sql  up.sql
backend/migrations/2020-12-05-001012_create_session_table/: down.sql  up.sql
backend/migrations/2020-12-15-041846_user_bspts/: down.sql  up.sql
backend/migrations/2020-12-27-020845_rewards/: down.sql  up.sql
backend/migrations/2021-01-02-070612_icons/: down.sql  up.sql
backend/migrations/2021-03-14-160341_lose_points/: down.sql  up.sql
backend/src/: error.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  time_unit.rs
backend/src/api/: mod.rs  task.rs
backend/src/query/: mod.rs  reward.rs  session.rs  task.rs  user.rs
backend/src/route/: mod.rs  reward.rs  task.rs  user.rs
backend/tests/: integration_test.rs  reward_tests.rs  setup.rs  task_tests.rs  user_tests.rs
data/: Cargo.toml  Dockerfile
data/src/: icon.rs  lib.rs  reward.rs  task.rs  user.rs
data/src/icon/: mod.rs  reward.rs  task.rs
frontend/: Cargo.toml  Makefile.toml
frontend/src/: apis.rs  app.rs  fontable.rs  icon.rs  lib.rs  server.rs  store.rs
frontend/src/components/: badge_field_header.rs  edit_result.rs  header.rs  icon_chooser.rs  icon_component.rs  mod.rs  popup.rs  reward_editor.rs  reward_icon.rs  reward_item.rs  task_component.rs  task_creator.rs  task_editor.rs  task_field.rs  task_item.rs  task_list.rs
frontend/src/data/: mod.rs  store.rs  store_item.rs  task_list.rs
frontend/src/data_store/: mod.rs  store_item.rs
frontend/src/pages/: home.rs  mod.rs  no_auth.rs  rewards.rs  signin.rs  signup.rs  tasks.rs
frontend/src/types/: task.rs
secrets/: jwt.key
site/: index.html  index.js
site/assets/: bspts.css
src/: apis.rs  lib.rs
src/components/: mod.rs  task_component.rs  task_creator.rs
src/pages/: home.rs
src/types/: task.rs
test_db/: Dockerfile  README.md
types/: Cargo.toml
types/src/: lib.rs  task.rs
