[package]
name = "backend"
version = "0.1.0"
authors = ["Skyler Olson <skyler.olson.rl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-files = "0.4.0"
actix-rt = "1.1.1"
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
types = { path = "../types" }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4"
