[package]
name = "backend"
version = "0.1.0"
authors = ["Skyler Olson <skyler.olson.rl@gmail.com>"]
edition = "2018"

[lib]
name = "backend_lib"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-files = "0.4.0"
actix-rt = "1.1.1"
actix-web = "3"
actix-session = "0.4"
actix-http = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
data = { path = "../data" }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
chrono = "0.4"
ring = "0.16.18"
rand_core = "0.5.1"
jsonwebtoken = "7.2.0"
js-sys = "0.3.46"